IDP-1121 Simplify typing for IdPAttributeValue
https://issues.shibboleth.net/jira/browse/IDP-1121

Phase 1.  Explcitly remove the <? extends IdPAttributeValue> from method prototypes.

It add no values except typing exercise and muddies the underlying typing issues.

This proved by the fact that nearly all thhe requirde code changes are in tests.