@@ -17,7 +17,6 @@
 
 package net.shibboleth.idp.saml.nameid.impl;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -109,9 +108,7 @@ public class AttributeSourcedSAML2NameIDGeneratorTest extends OpenSAMLInitBaseTe
 
     @Test public void testWrongType() throws Exception {
         final int[] intArray = {1, 2, 3, 4};
-        final List<? extends IdPAttributeValue<?>> values =
-                Arrays.asList(
-                        new IdPAttributeValue<Object>() {
+        final var values = List.of(new IdPAttributeValue<Object>() {
                             public Object getValue() {
                                 return intArray;
                             }
@@ -132,10 +129,8 @@ public class AttributeSourcedSAML2NameIDGeneratorTest extends OpenSAMLInitBaseTe
     }
 
     @Test public void testWrongFormat() throws Exception {
-        final List<? extends IdPAttributeValue<?>> values =
-                Collections.singletonList(saml2NameIdFor(NAME_1));
         final IdPAttribute inputAttribute = new IdPAttribute(ATTR_NAME);
-        inputAttribute.setValues(values);
+        inputAttribute.setValues(List.of(saml2NameIdFor(NAME_1)));
         prc.getSubcontext(RelyingPartyContext.class).getSubcontext(AttributeContext.class, true).setIdPAttributes(
                 Collections.singleton(inputAttribute));
 
@@ -146,10 +141,8 @@ public class AttributeSourcedSAML2NameIDGeneratorTest extends OpenSAMLInitBaseTe
     }
     
     @Test public void testNameIDValued() throws Exception {
-        final List<? extends IdPAttributeValue<?>> values =
-                Collections.singletonList(saml2NameIdFor(NAME_1));
         final IdPAttribute inputAttribute = new IdPAttribute(ATTR_NAME);
-        inputAttribute.setValues(values);
+        inputAttribute.setValues(List.of(saml2NameIdFor(NAME_1)));
         prc.getSubcontext(RelyingPartyContext.class).getSubcontext(AttributeContext.class, true).setIdPAttributes(
                 Collections.singleton(inputAttribute));
 
@@ -164,11 +157,8 @@ public class AttributeSourcedSAML2NameIDGeneratorTest extends OpenSAMLInitBaseTe
     }
 
     @Test public void testMultiNameIDValued() throws Exception {
-        final List<? extends IdPAttributeValue<?>> values =
-                Arrays.asList(saml2NameIdFor(OTHERID), saml1NameIdFor(NAME_1));
-
         final IdPAttribute inputAttribute = new IdPAttribute(ATTR_NAME);
-        inputAttribute.setValues(values);
+        inputAttribute.setValues(List.of(saml2NameIdFor(OTHERID), saml1NameIdFor(NAME_1)));
         prc.getSubcontext(RelyingPartyContext.class).getSubcontext(AttributeContext.class, true).setIdPAttributes(
                 Collections.singleton(inputAttribute));
 
@@ -183,11 +173,8 @@ public class AttributeSourcedSAML2NameIDGeneratorTest extends OpenSAMLInitBaseTe
     }
     
     @Test public void testStringValued() throws Exception {
-        final List<? extends IdPAttributeValue<?>> values =
-                Collections.singletonList(new StringAttributeValue(NAME_1));
-
         final IdPAttribute inputAttribute = new IdPAttribute(ATTR_NAME);
-        inputAttribute.setValues(values);
+        inputAttribute.setValues(List.of(new StringAttributeValue(NAME_1)));
         prc.getSubcontext(RelyingPartyContext.class).getSubcontext(AttributeContext.class, true).setIdPAttributes(
                 Collections.singleton(inputAttribute));
 
@@ -203,11 +190,8 @@ public class AttributeSourcedSAML2NameIDGeneratorTest extends OpenSAMLInitBaseTe
     }
 
     @Test public void testScopeValued() throws Exception {
-        final List<? extends IdPAttributeValue<?>> values =
-                Collections.singletonList(new ScopedStringAttributeValue(NAME_1, QUALIFIER));
-
         final IdPAttribute inputAttribute = new IdPAttribute(ATTR_NAME);
-        inputAttribute.setValues(values);
+        inputAttribute.setValues(List.of(new ScopedStringAttributeValue(NAME_1, QUALIFIER)));
         prc.getSubcontext(RelyingPartyContext.class).getSubcontext(AttributeContext.class, true).setIdPAttributes(
                 Collections.singleton(inputAttribute));
 
